Fixing z-index problems with footer

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ body {
     justify-content: center space-between;
     align-items: center;
     background: black;
-    z-index: 0;
+    z-index: 1;
 }
 
 .nav .nav-menu ul {
@@ -163,7 +163,7 @@ body {
     transform: translateX(-400px);
     display: flex;
     justify-content: center;
-    z-index: 1;
+    z-index: 2;
     margin-top: 0;
     padding-top: 3px;
     padding-bottom: 10px;
@@ -253,12 +253,12 @@ body {
     background: black;
     text-align: center;
     padding: 30px;
-    z-index: -1;
+    z-index: 0;
 }
 
 .footer .links {
     display: grid;
-    grid-template-columns: repeat(4, 25%);
+    grid-template-columns: repeat(4, 1fr);
 }
 
 .footer .links ul {
@@ -386,11 +386,11 @@ body {
 
 @media (max-width: 640px) {
     .footer .links {
-        grid-template-columns: repeat(2, 50%);
-        grid-template-rows: repeat(2, 50%);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
     }
     .footer .links ul {
-        margin-bottom: 15px;
+        margin-bottom: 30px;
     }
     .footer {
         padding-bottom: 30px;
@@ -400,13 +400,16 @@ body {
 
 /* for small screens: footer */
 
-@media (max-width: 315px) {
+@media (max-width: 330px) {
     .footer .links {
         grid-template-columns: 100%;
-        grid-template-rows: repeat(4, 25%);
+        grid-template-rows: repeat(4, 1fr);
     }
     .footer .links ul {
-        margin-bottom: 15px;
+        margin-bottom: 30px;
+    }
+    .footer .links:last-child {
+        margin-bottom: 0;
     }
     .footer {
         padding-bottom: 30px;
